--- a/game.project
+++ b/game.project
@@ -3,19 +3,28 @@ title = My project
 version = 0.1
 
 [bootstrap]
-main_collection = /main/main.collectionc
+main_collection = /main/bounce/bounce.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
 use_accelerometer = 0
-
-[display]
-width = 640
-height = 360
 
 [physics]
 scale = 0.02
 
 [script]
 shared_state = 1
+
+[sprite]
+max_count = 2000
+
+[graphics]
+max_debug_vertices = 50000
+
+[collection]
+max_instances = 2024
+
+[display]
+variable_dt = 0
+update_frequency = 60
 
