--- a/game.project
+++ b/game.project
@@ -1,9 +1,9 @@
 [project]
-title = My project
-version = 0.1
+title = D-AABBs
+version = 0.6
 
 [bootstrap]
-main_collection = /main/bounce/bounce.collectionc
+main_collection = /main/platformer/platformer.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
