--- a/game.project
+++ b/game.project
@@ -3,7 +3,7 @@ title = DAABBCC
 version = 0.6
 
 [bootstrap]
-main_collection = /main/bounce/bounce.collectionc
+main_collection = /tests/main/bounce/bounce.collectionc
 
 [input]
 game_binding = /input/game.input_bindingc
@@ -27,4 +27,7 @@ max_instances = 2024
 [display]
 variable_dt = 0
 update_frequency = 60
+
+[library]
+include_dirs = daabbcc
 
