--- a/game.project
+++ b/game.project
@@ -1,6 +1,7 @@
 [project]
 title = DAABBCC
 version = 0.6
+write_log = 0
 
 [bootstrap]
 main_collection = /tests/main/RaycastAABB/raycastaabb.collectionc
@@ -35,4 +36,7 @@ include_dirs = daabbcc
 
 [native_extension]
 app_manifest = 
+
+[html5]
+include_dev_tool = 0
 
