--- a/game.project
+++ b/game.project
@@ -1,5 +1,5 @@
 [bootstrap]
-main_collection = /example/test/test.collectionc
+main_collection = /example/example.collectionc
 
 [script]
 shared_state = 1
