Optional group + windows int fix

--- a/game.project
+++ b/game.project
@@ -20,3 +20,6 @@ max_gameobject_count = 128
 max_query_result_count = 32
 max_raycast_result_count = 32
 
+[native_extension]
+app_manifest = /test.appmanifest
+
